Name               : happaste
Version            : 0.1.0
License            : BSD3
Cabal-Version      : >= 1.9.2
Build-Type         : Simple
Extra-Source-Files : assets/*.css

Executable happaste
  Main-Is       : happaste.hs
  GHC-Options   :
    -Wall
    -fno-warn-orphans
    -fno-warn-unused-do-bind
    -fno-warn-unused-imports
    -threaded -rtsopts -with-rtsopts=-N
    -F -pgmF trhsx
  Extensions    :
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    TypeSynonymInstances
  Build-Depends :
    acid-state,
    base == 4.*,
    blaze-html,
    boomerang,
    bytestring,
    containers,
    data-default,
    data-lens-fd,
    data-lens-template,
    digestive-functors < 0.2,
    digestive-functors-happstack < 0.3,
    digestive-functors-hsp,
    file-embed,
    happstack-hsp >= 6.1.0,
    happstack-jmacro,
    happstack-server,
    highlighter,
    hsx,
    hsx-jmacro,
    ixset,
    jmacro,
    mtl,
    safecopy,
    shakespeare-css,
    template-haskell == 2.5.*,
    text >= 0.11.1.1,
    web-routes,
    web-routes-boomerang,
    web-routes-happstack,
    web-routes-hsp
