Name               : happaste
Version            : 0.1.0
License            : BSD3
Cabal-Version      : >= 1.9.2
Build-Type         : Simple
Extra-Source-Files : assets/*.css assets/*.js

Executable happaste
  HS-Source-Dirs : src
  Main-Is        : Main.hs
  Other-Modules  :
    Happaste.Css
    Happaste.Forms
    Happaste.Html
    Happaste.Routes
    Happaste.Scripts
    Happaste.State
    Happaste.Types
  GHC-Options    :
    -Wall
    -fno-warn-orphans
    -fno-warn-unused-do-bind
    -threaded -rtsopts -with-rtsopts=-N
  Extensions     :
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    TypeSynonymInstances
  Build-Depends  :
    acid-state           == 0.6.*,
    base                 == 4.*,
    blaze-html           == 0.4.*,
    boomerang            == 1.3.*,
    bytestring           == 0.9.*,
    containers           == 0.4.*,
    data-default         == 0.4.*,
    data-lens-fd         == 2.0.*,
    data-lens-template   == 2.1.*,
    file-embed           == 0.0.*,
    happstack-hsp        == 7.1.*,
    happstack-jmacro     == 7.0.*,
    happstack-server     == 7.0.1,
    haskell-src-exts     == 1.13.* && >= 1.13.1,
    haskell-src-meta     == 0.5.* && >= 0.5.1.2,
    highlighter          == 0.2.*,
    hslogger             == 1.1.*,
    hsx                  == 0.10.*,
    hsx-jmacro           == 7.0.0,
    ixset                == 1.0.*,
    jmacro               == 0.5.*,
    language-css         == 0.0.*,
    mtl                  == 2.0.*,
    reform               == 0.1.*,
    reform-happstack     == 0.1.*,
    reform-hsp           == 0.1.*,
    safecopy             == 0.6.*,
    text                 == 0.11.*,
    web-routes           == 0.27.*,
    web-routes-boomerang == 0.26.*,
    web-routes-happstack == 0.23.*,
    web-routes-hsp       == 0.23.*
